# MyTcasDashboard

./: .gitignore  README.md  main.py  pyproject.toml  styles.py  tcas_dataset.csv  tcas_dataset_cleaned.csv
datascrapping/: clean_data.ipynb  data_output.ipynb  data_preparation.ipynb  scraping_tcas.py  show_data.ipynb
datasets/: data0.json  data1.json  data10.json  data11.json  data12.json  data13.json  data14.json  data15.json  data16.json  data17.json  data18.json  data19.json  data2.json  data20.json  data21.json  data22.json  data23.json  data24.json  data25.json  data26.json  data27.json  data28.json  data29.json  data3.json  data30.json  data31.json  data32.json  data33.json  data34.json  data35.json  data36.json  data37.json  data38.json  data39.json  data4.json  data40.json  data41.json  data5.json  data55.json  data56.json  (+24 more)
