[tool.poetry]
name = "mytcasdashboard"
version = "0.1.0"
description = ""
authors = ["MossOcelot <phuminforwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.1"
selenium = "^4.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
