[tool.poetry]
name = "MyTcasDashboard"
version = "0.1.0"
description = ""
authors = ["MossOcelot <phuminforwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.0.1"
selenium = "^4.23.1"
dash = {extras = ["diskcache"], version = "^2.17.1"}
dash-bootstrap-components = "^1.6.0"
openpyxl = "^3.1.5"
diskcache = "^5.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
